--- a/SleepDawgs/build.gradle
+++ b/SleepDawgs/build.gradle
@@ -3,27 +3,35 @@ buildscript {
     ext {
         version_appcompat = '1.6.1'
         version_constraint_layout = '2.1.4'
-        version_core = '1.10.0'
-        version_coroutine = '1.3.9'
+        version_core = '1.10.1'
+        version_coroutines = '1.7.1'
+        version_espresso = '3.5.1'
         version_fragment = '1.5.7'
         version_gradle = '8.0.1'
+        version_hamcrest = '2.2'
+        version_junit = '4.13.2'
         version_kotlin = '1.8.10'
         version_lifecycle = '2.6.1'
         version_material = '1.9.0'
+        version_mockito = '5.3.1'
+        version_mockito_dexmaker = '2.28.3'
         version_navigation = '2.5.3'
         version_room = '2.5.1'
+        version_test = '1.1.5'
+        version_test_core = '1.5.0'
+        version_arch_testing = '2.2.0'
+        version_timber = '5.0.1'
+        version_work = '2.8.1'
+    }
+    repositories {
+        google()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$version_gradle"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
     }
-}
-
-plugins {
-    id 'com.android.application' version '8.0.0' apply false
-    id 'com.android.library' version '8.0.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
 
 task clean(type: Delete) {
