--- a/GDG/app/build.gradle
+++ b/GDG/app/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'org.jetbrains.kotlin.plugin.parcelize'
     id 'androidx.navigation.safeargs'
+    id 'org.jetbrains.kotlin.plugin.parcelize'
 }
 
 android {
@@ -27,19 +27,33 @@ android {
         }
     }
     buildFeatures {
+        buildConfig true
         dataBinding true
+        viewBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
+    dataBinding {
+        enabled = true
+        enabledForTests = true
+    }
     kotlin {
         jvmToolchain(17)
+    }
+    testOptions.unitTests {
+        includeAndroidResources = true
+        returnDefaultValues = true
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$version_kotlin"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutines"
 
     implementation "androidx.activity:activity-ktx:$version_activity"
     implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
@@ -50,23 +64,37 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "androidx.navigation:navigation-ui-ktx:$version_navigation"
     implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
+    implementation "androidx.work:work-runtime-ktx:$version_work"
 
     implementation "com.github.bumptech.glide:glide:$version_glide"
     implementation "com.google.android.material:material:$version_material"
     implementation "com.google.android.gms:play-services-location:$version_play_services"
+    implementation "com.jakewharton.timber:timber:$version_timber"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
     implementation "com.squareup.moshi:moshi:$version_moshi"
     implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$version_kotlin"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutines"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutines"
+    kapt "androidx.lifecycle:lifecycle-compiler:$version_lifecycle"
 
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    // NOTE: explicitly for androidTest sources
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$version_espresso"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$version_espresso"
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:$version_mockito_dexmaker"
+    androidTestImplementation "org.mockito:mockito-core:$version_mockito"
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    // NOTE: used in both test and androidTest sources
+    debugImplementation "androidx.fragment:fragment-testing:$version_fragment"
+    debugImplementation "androidx.test.ext:junit:$version_test"
+    debugImplementation "junit:junit:$version_junit"
+    debugImplementation "org.hamcrest:hamcrest:$version_hamcrest"
+    debugImplementation "org.hamcrest:hamcrest-library:$version_hamcrest"
+    debugImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$version_coroutines"
+
+    // NOTE: explicitly for test sources
+    testImplementation "androidx.arch.core:core-testing:$version_arch_testing"
+    testImplementation "androidx.test:core-ktx:$version_test_core"
+    testImplementation "org.robolectric:robolectric:$version_robolectric"
 }
