--- a/GDG/build.gradle
+++ b/GDG/build.gradle
@@ -1,38 +1,43 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        version_activity = '1.7.1'
-        version_gradle = '8.0.1'
-        version_core = '1.10.0'
-        version_fragment = '1.5.7'
-        version_kotlin = '1.8.10'
-        version_coroutines = "1.3.9"
-        version_lifecycle = "2.6.1"
-        version_moshi = '1.14.0'
-        version_navigation = '2.5.3'
+        version_activity = '1.7.2'
         version_constraint_layout = '2.1.4'
+        version_core = '1.10.1'
+        version_coroutines = '1.7.1'
+        version_espresso = '3.5.1'
+        version_fragment = '1.5.7'
         version_glide = '4.15.1'
+        version_gradle = '8.0.2'
+        version_hamcrest = '2.2'
+        version_junit = '4.13.2'
+        version_kotlin = '1.8.21'
+        version_lifecycle = '2.6.1'
+        version_material = '1.9.0'
+        version_mockito = '5.3.1'
+        version_mockito_dexmaker = '2.28.3'
+        version_moshi = '1.15.0'
+        version_navigation = '2.5.3'
+        version_play_services = '21.0.1'
+        version_recyclerview = '1.3.0'
         version_retrofit = '2.9.0'
         version_retrofit_coroutines_adapter = '0.9.2'
-        version_recyclerview = '1.3.0'
-        version_material = '1.9.0'
-        version_play_services = '21.0.0'
+        version_robolectric = '4.10.3'
+        version_test = '1.1.5'
+        version_test_core = '1.5.0'
+        version_arch_testing = '2.2.0'
+        version_timber = '5.0.1'
+        version_work = '2.8.1'
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$version_gradle"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
     }
-}
-
-plugins {
-    id 'com.android.application' version '8.0.1' apply false
-    id 'com.android.library' version '8.0.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
 }
 
 task clean(type: Delete) {
