--- a/SleepDawgs/app/build.gradle
+++ b/SleepDawgs/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs'
+    id 'org.jetbrains.kotlin.plugin.parcelize'
 }
 
 android {
@@ -50,7 +51,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$version_kotlin"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutines"
 
     implementation "androidx.appcompat:appcompat:$version_appcompat"
     implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
@@ -66,8 +70,6 @@ dependencies {
 
     implementation "com.google.android.material:material:$version_material"
     implementation "com.jakewharton.timber:timber:$version_timber"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutines"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutines"
 
     annotationProcessor "androidx.room:room-compiler:$version_room"
 
@@ -92,5 +94,5 @@ dependencies {
     // NOTE: explicitly for test sources
     testImplementation "androidx.arch.core:core-testing:$version_arch_testing"
     testImplementation "androidx.test:core-ktx:$version_test_core"
-    testImplementation "org.robolectric:robolectric:4.10.3"
+    testImplementation "org.robolectric:robolectric:$version_robolectric"
 }
