--- a/SleepDawgs/build.gradle
+++ b/SleepDawgs/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         version_mockito = '5.3.1'
         version_mockito_dexmaker = '2.28.3'
         version_navigation = '2.5.3'
+        version_robolectric = '4.10.3'
         version_room = '2.5.1'
         version_test = '1.1.5'
         version_test_core = '1.5.0'
